# PyMEX

./: .gitignore  README.md  pyproject.toml
config/: reservoir_config.json  reservoir_config.yaml  tpl.rwd
example/: TemplateReport.tpl  config.yaml  config_pituba.yaml
res_pymex/: TemplateReport.tpl  __init__.py  create_shedule.py  imex_tools.py  mani_param.py  multi_process.py  pymex.py  read_dat.py  settings.py  util.py
tests/: read_dat.py  test_imex_tools.py  test_imextools.py  test_mani_param.py  test_multi_process.py  test_pymex.py  test_read_dat.py
