[tool.poetry]
name = "res-pymex"
version = "0.2.0"
description = ""
authors = ["HYGOR VINICIUS COSTA SILVA <hygorvcosta@gmail.com>"]
readme = "README.md"
packages = [{include = "res_pymex"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
numpy = "^1.24.3"
pyyaml = "^6.0"
pytest = "^7.3.1"
h5py = "^3.9.0"
xarray = "^2023.6.0"
python-dateutil = "^2.8.2"
pyaml = "^23.7.0"
aiofiles = "^23.2.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
autopep8 = "^2.0.2"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
